--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "util": "^0.12.5",
-    "web-vitals": "^4.2.4"
+    "web-vitals": "^4.2.4",
+    "webpack-dev-middleware": "^7.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
